# MLPP

./: CMakeLists.txt
include/: array2D.hpp  classifiermixin.hpp  crtp.hpp  generator.hpp  linearregression.hpp  logsticregression.hpp  mlcommons.hpp  polynomialfeatures.hpp  regressormixin.hpp  transformermixin.hpp  utils.hpp  zscorenormalizer.hpp
src/: linearregression.cpp  main.cpp  mlcommons.cpp  zscorenormalizer.cpp
trying/: test_function_param.cpp
